--- a/public/styles/sass/base/_typography.scss
+++ b/public/styles/sass/base/_typography.scss
@@ -36,5 +36,7 @@ h3 {
 }
 
 .faded {
+  // text-align: center;
+  font-style: italic;
   color: #bbb !important;
 }
